[package]
name = "gpac-sys"
version = "0.9.0"
authors = ["Isamu Mogi"]
build = "build.rs"
description = "Bindings to GPAC"
license = "LGPL-2.1"
readme = "README.md"
repository = "https://github.com/saturday06/rust-gpac-sys"

[build-dependencies]
bindgen = "0"

[badges]
travis-ci = { repository = "saturday06/rust-gpac-sys" }
