[package]
name = "gpac-sys"
version = "0.9.3"
authors = ["Isamu Mogi"]
build = "build.rs"
description = "Bindings to GPAC"
license = "LGPL-2.1"
readme = "README.md"
repository = "https://github.com/saturday06/rust-gpac-sys"

[features]
# Use static library
static = []

[build-dependencies]
bindgen = "0"

[badges]
travis-ci = { repository = "saturday06/rust-gpac-sys" }
